<resources>
    <string name="app_name">TeamWork</string>
    <string name="login_tv">登录</string>
    <string name="login_name">帐号/邮箱</string>
    <string name="login_pwd">密码</string>
    <string name="login_btn">登录</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_weChat">微信登录</string>
    <string name="forget_tv">重置密码</string>
    <string name="forget_et">输入注册邮箱或手机号码</string>
    <string name="forget_btn">下一步</string>
    <string name="register_tv">注册</string>
    <string name="register_phone">手机号码</string>
    <string name="register_authCode">验证码</string>
    <string name="register_getAuthCode">获取验证码</string>
    <string name="register_email">邮箱</string>
    <string name="register_ID">账号</string>
    <string name="register_name">姓名</string>
    <string name="register_pwd">密码(至少6位)</string>
    <string name="register_btnGet">注册</string>
    <string name="register_weChat">微信登录</string>
    <string name="register_tvPhone">用手机号码注册</string>
    <string name="register_tvEmail">用邮箱注册</string>
    <string name="main_project">项目</string>
    <string name="main_me">我的</string>
    <string name="main_message">通知</string>
    <string name="main_chat">聊天</string>
    <string name="main_name">TeamWork</string>

</resources>

