<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPale"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="21dp"
            android:textColor="@color/colorBlack"
            android:text="@string/register_tv"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--android:phoneNumber="true"设置为电话号码的输入方式-->
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:phoneNumber="true"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:hint="@string/register_phone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_authCode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:phoneNumber="true"
                android:singleLine="true"
                android:hint="@string/register_authCode"/>
            <Button
                android:id="@+id/btn_getAuthCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/register_getAuthCode"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:hint="@string/register_ID" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:hint="@string/register_pwd"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGray"
            android:text="@string/register_btnGet"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/register_tvEmail"/>
        <TextView
            android:id="@+id/tv_weChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textColor="@color/colorGreen"
            android:textSize="18dp"
            android:text="@string/login_weChat"/>
    </LinearLayout>
    </LinearLayout>