<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPale"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="21dp"
            android:textColor="@color/colorBlack"
            android:text="@string/register_tv"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--android:digits="1234567890@qqsina.com"设置允许输入哪些字符-->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:digits="1234567890@qqsinacet.com"
            android:singleLine="true"
            android:hint="@string/register_email"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="20dp"
            android:hint="@string/register_name" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginBottom="20dp"
            android:hint="@string/register_pwd"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGray"
            android:text="@string/register_btnGet"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/register_tvPhone"/>

        <TextView
            android:id="@id/tv_weChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textColor="@color/colorGreen"
            android:textSize="18dp"
            android:text="@string/login_weChat"/>
    </LinearLayout>
</LinearLayout>