<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPale"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/img_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/back"/>
         <TextView
             android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_gravity="center_vertical"
             android:textSize="21dp"
             android:textColor="@color/colorBlack"
             android:text="@string/login_tv"/>
     </LinearLayout>
     <LinearLayout
         android:paddingTop="70dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

         <EditText
              android:id="@+id/et_number"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:singleLine="true"
              android:hint="@string/login_name"/>
         <!--android:inputType="numberPassword"加密-->
         <!--android:singleLine="true"禁止换行-->
         <EditText
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:singleLine="true"
             android:inputType="numberPassword"
             android:hint="@string/login_pwd"/>

         <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
             android:background="@color/colorGray"
             android:text="@string/login_btn"/>
         <TextView
             android:id="@+id/tv_forgetPwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:textSize="18dp"
             android:text="@string/login_forget"/>
         <TextView
             android:id="@+id/tv_weChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:layout_gravity="center"
             android:textColor="@color/colorGreen"
             android:textSize="18dp"
             android:text="@string/login_weChat"/>
     </LinearLayout>
</LinearLayout>