<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPale"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="21dp"
            android:textColor="@color/colorBlack"
            android:text="@string/forget_tv"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:digits="1234567890@qqsinacet.com"
            android:singleLine="true"
            android:hint="@string/forget_et"/>

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGray"
            android:text="@string/forget_btn"/>

    </LinearLayout>
</LinearLayout>